--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,25 @@
   <!--ヘッダー-->
   
   <header class="header">
-    <div class="header_bar row">
+    <div class="header__bar row">
       <h1 class="grid-6"><a href="/"></a>みんなのツールボックス</h1>
       
       <!--ユーザーがサインインしてる場合-->
       
-      <% if use_signed_in? %>
+      <% if user_signed_in? %>
       <div class="user_nav grid-6">
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-        <a class="post" href="/tweets/new">投稿する！</a>
+        <span><%= current_user.nickname %>
+         <ul class="user__info">
+           <li>
+             <a href="/users/<%= current_user.id %>">マイページ</a>
+             <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+           
+             
+           </li>
+           
+         </ul>
+         </span>
+            <a class="post" href="/posts/new">投稿する！</a>
       </div>
       
       <!--ユーザーがサインインしていない場合-->
