--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,6 +27,15 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
+  
+  <div class="field">
+    <%= f.label :introduction %><br />
+    <%= f.text_field :introduction, autocomplete: "off" %>
+  </div>
+  
+  <div class="field">
+    <%= f.file_field :avatar %>
+  </div>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
