--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,23 +1,54 @@
 <div class="contents row">
-  <div class="content_post" style="background-image: url(<%= @post.image %>);">
+  <div class="content_post" >
+    
+    <%= image_tag(@post.image) %>
+    <%= @post.image %>
+    
     <% if user_signed_in? && current_user.id == @post.user_id %>
       <div class="more">
-        <span><%= image_tag 'arrow_top.png' %></span>
+        <span></span>
         <ul class="more_list">
           <li>
-            <%= link_to '編集', "/tweets/#{@post.id}/edit", method: :get %>
+            <%= link_to '編集', "/posts/#{@post.id}/edit", method: :get %>
           </li>
           <li>
-            <%= link_to '削除', "/tweets/#{@post.id}", method: :delete %>
+            <%= link_to '削除', "/posts/#{@post.id}", method: :delete %>
           </li>
         </ul>
       </div>
     <% end %>
-    <%= simple_format(@post.text) %>
+    
+    <%= simple_format(@post.content) %>
+    
     <span class="name">
       <a href="/users/<%= @post.user_id %>">
         <span>投稿者</span><%= @post.user.nickname %>
       </a>
     </span>
+    
+  </div>
+  
+   <div class="container"> 
+    <!-- ここからフォーム -->
+    <% if current_user %>
+      <%= form_tag("/posts/#{@post.id}/comments", method: :post) do %>
+        <textarea name="text" placeholder="コメントする" rows="2" cols="30"></textarea>
+        <input type="submit" value="SENT">
+      <% end %>
+    <% end %>
+    
+    <!--ここからコメント-->
+    <div class="comments">
+      <h4>＜コメント一覧＞</h4>
+      <% if @comments %>
+        <% @comments.each do |comment| %>
+        <p>
+          <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>:</strong>
+          <%= comment.text %>
+        </p>
+        <% end %>
+      <% end %>
+    </div>
+    
   </div>
 </div>
