--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,32 +1,51 @@
  <!--<div class="content_post" style="background-image": url(<);>-->
-    
+
+    <% @posts.each do |post| %>
+  
+  
+      
     <div class="render_post">
     
+ 
+  
+    <p>投稿日時：<%= post.created_at%></p>
     
-    <span id="post_title">タイトル:<%= post.title%></span>
-    <br>
-    
-    <span>投稿者:</span><%= post.user.nickname  %>
-    <br>
-    
-    <%= image_tag(post.image) %>
-    <%= post.image %>
+    <h3>タイトル:<%= post.title%></h3>
     <br>
     
-    <%= post.content%>
+    <span>
+      <div class="poster_image"><%= image_tag current_user.avatar ,:class => "your_icon_image" %></div>
+      <p>投稿者:<%= post.user.nickname  %></p>
+    </span>
     <br>
     <br>
+    
+    <!--コントローラーでuserとimagetextsをincludeしたら表示できた。eachの書き方とインスタンス変数post．image textsの書き方もこれでいいらしい-->
+    <% post.imagetexts.each do |imagetexts|%>
+    
+    <%= image_tag(imagetexts.image) %>
+
+    <br>
+    
+    <%= simple_format(imagetexts.content)%>
+    <br>
+    <br>
+    
+    <% end %>
+    
+    <%= link_to '投稿の詳細！', "/posts/#{post.id}", method: :get %>
     
     <% if user_signed_in? && post.user_id == current_user.id %>
     
       <%= link_to '投稿を削除する', "/posts/#{post.id}", method: :delete %>
+
     <% end %>
     
+
     
-    <%= link_to '投稿の詳細！', "/posts/#{post.id}", method: :get %>
     
        <%= render partial: "like", locals: { post: post } %>
     
     </div>
     
-    
+  <% end %>
