--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,3 @@
-<div class="contents row" >
-  <% @posts.each do |post| %>
-     <%= render partial: "posts", locals: { post: post } %>
-  <% end %>
 
-  
-
-  
+   <%= render partial: "posts" %>
     
-  
-</div>
