--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,30 +1,39 @@
-<div class="contents row">
-  <div class="content_post" >
+  <div class="render_post">
     
-    <%= image_tag(@post.image) %>
-    <%= @post.image %>
+ 
+  
+    <p>投稿日時：<%= @post.created_at%></p>
     
-    <% if user_signed_in? && current_user.id == @post.user_id %>
-      <div class="more">
-        <span></span>
-        <ul class="more_list">
-          <li>
-            <%= link_to '編集', "/posts/#{@post.id}/edit", method: :get %>
-          </li>
-          <li>
-            <%= link_to '削除', "/posts/#{@post.id}", method: :delete %>
-          </li>
-        </ul>
-      </div>
+    <h3>タイトル:<%= @post.title%></h3>
+    <br>
+    
+    <span>
+      <div class="poster_image"><%= image_tag current_user.avatar ,:class => "your_icon_image" %></div>
+      <p>投稿者:<%= @post.user.nickname  %></p>
+    </span>
+    <br>
+    <br>
+    
+    <!--コントローラーでuserとimagetextsをincludeしたら表示できた。eachの書き方とインスタンス変数post．image textsの書き方もこれでいいらしい-->
+    <% @post.imagetexts.each do |imagetexts|%>
+    
+    <%= image_tag(imagetexts.image) %>
+
+    <br>
+    
+    <%= simple_format(imagetexts.content)%>
+    <br>
+    <br>
+    
     <% end %>
     
-    <%= simple_format(@post.content) %>
+ 
     
-    <span class="name">
-      <a href="/users/<%= @post.user_id %>">
-        <span>投稿者</span><%= @post.user.nickname %>
-      </a>
-    </span>
+    <% if user_signed_in? && @post.user_id == current_user.id %>
+    
+      <%= link_to '投稿を削除する', "/posts/#{@post.id}", method: :delete %>
+
+    <% end %>
     
   </div>
   
