--- a/app/views/tools/show_ranking.html.erb
+++ b/app/views/tools/show_ranking.html.erb
@@ -1,22 +1,20 @@
 <div class="contents row" >
     <!--bootstrapでのプルダウンリンク-->
     <div class="dropdown show">
-  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    投稿を並べ替え
-  </a>
+      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        投稿を並べ替え
+      </a>
+    
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <a class="dropdown-item" href="/tools/<%= params[:id] %>">投稿が新しい順</a>
+        <a class="dropdown-item" href="/tools/<%= params[:id] %>/ranking">いいね！ランキング順</a>
+      </div>
+    </div>
 
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <a class="dropdown-item" href="/tools/<%= params[:id] %>">投稿が新しい順</a>
-    <a class="dropdown-item" href="/tools/<%= params[:id] %>/ranking">いいね！ランキング順</a>
-  </div>
+
+     <%= render partial: "posts/posts" %>
+  
 </div>
-
-  <% @posts.each do |post| %>
-     <%= render partial: "posts/posts", locals: { post: post } %>
-  <% end %>
-  </div>
   
   
     
-  
-</div>
